OBPIH-6108 Fix input error message styling on a form - prevent inputs from jumping when errors appear under the input

--- a/src/js/components/productSupplier/create/styles.scss
+++ b/src/js/components/productSupplier/create/styles.scss
@@ -60,6 +60,10 @@
   .rt-tbody {
     max-height: 275px;
   }
+
+  .input-wrapper-error-message {
+    min-height: unset;
+  }
 }
 
 .basic-details-active-switch {
